--- a/source/less/blocks/menu.less
+++ b/source/less/blocks/menu.less
@@ -227,6 +227,10 @@
   @media (min-width: @tablet-width) {
     top: -140px;
   }
+
+  @media (min-width: @desktop-width) {
+    top: 0;
+  }
 }
 
 // Inner pages
