--- a/source/less/blocks/page-footer.less
+++ b/source/less/blocks/page-footer.less
@@ -1,9 +1,12 @@
 .page-footer {
   position: relative;
   z-index: @z-index-page-footer;
-  margin-top: -25px;
   background-color: @white;
   border-radius: 25px 25px 0 0;
+
+  &--index {
+    margin-top: -25px;
+  }
 }
 
 .page-footer__wrapper {
