--- a/source/less/blocks/add-plan.less
+++ b/source/less/blocks/add-plan.less
@@ -1,9 +1,24 @@
 .add-plan {
   position: relative;
+  padding: 30px 25px 100px;
+
+  @media (min-width: @tablet-width) {
+    padding: 53px 75px 114px;
+  }
+
+  @media (min-width: @desktop-width) {
+    padding: 55px 60px 130px;
+  }
 }
 
 .add-plan__title {
   padding-right: 60px;
+}
+
+.add-plan .add-plan__title {
+  @media (min-width: @desktop-width) {
+    padding-left: 69px;
+  }
 }
 
 .add-plan__steps-tracker {
@@ -14,6 +29,11 @@
   @media (min-width: @tablet-width) {
     top: 66px;
     right: 73px;
+  }
+
+  @media (min-width: @desktop-width) {
+    top: 252px;
+    right: 267px;
   }
 }
 
@@ -28,5 +48,9 @@
 
   @media (min-width: @tablet-width) {
     margin-bottom: 39px;
+  }
+
+  @media (min-width: @desktop-width) {
+    margin-bottom: 44px;
   }
 }
