--- a/source/less/blocks/info.less
+++ b/source/less/blocks/info.less
@@ -8,6 +8,11 @@
   flex-wrap: wrap;
   justify-content: center;
   align-items: center;
+
+  @media (min-width: @desktop-width) {
+    flex-direction: row;
+    justify-content: space-between;
+  }
 }
 
 .info__fieldset {
@@ -23,6 +28,14 @@
     @media (min-width: @tablet-width) {
       order: 2;
     }
+
+    @media (min-width: @desktop-width) {
+      order: 1;
+      box-sizing: border-box;
+      width: 732px;
+      margin-right: 100px;
+      margin-bottom: 0;
+    }
   }
 
   &--transport {
@@ -37,6 +50,19 @@
       min-width: 308px;
       margin-bottom: -110px;
     }
+
+    @media (min-width: @desktop-width) {
+      top: 0;
+      order: 2;
+      min-width: 384px;
+      margin-bottom: 0;
+    }
+  }
+}
+
+.info .info__fieldset {
+  @media (min-width: @desktop-width) {
+    margin-bottom: 0;
   }
 }
 
@@ -47,6 +73,12 @@
     left: 50%;
     transform: translate(-50%, 50%);
     background-color: @basic-steelblue;
+  }
+}
+
+.info__fieldset--tags .info__legend {
+  @media (min-width: @desktop-width) {
+    left: 48px;
   }
 }
 
@@ -65,9 +97,19 @@
   display: none;
   margin-top: 18px;
   cursor: pointer;
+
+  @media (min-width: @desktop-width) {
+    margin: 0 auto;
+  }
 }
 
 // No JS
+.info--no-js .info__fieldset {
+  @media (min-width: @desktop-width) {
+    margin-bottom: 40px;
+  }
+}
+
 .info--no-js .info__button {
   display: block;
 }
