--- a/source/less/blocks/page-main.less
+++ b/source/less/blocks/page-main.less
@@ -2,6 +2,10 @@
   position: relative;
   margin-top: -73px;
 
+  @media (min-width: @desktop-width) {
+    margin-top: -130px;
+  }
+
   &--no-js {
     margin-top: 0;
 
@@ -112,6 +116,11 @@
       display: none;
     }
   }
+
+  @media (min-width: @desktop-width) {
+    padding: 223px 500px 68px 124px;
+    border-radius: 0 0 60px 60px;
+  }
 }
 
 .page-main__title {
@@ -148,13 +157,20 @@
       background-color: @special-orange;
       border-radius: 4px;
     }
+
+    @media (min-width: @tablet-width) {
+      &::after {
+        bottom: -70px;
+        height: 8px;
+      }
+    }
   }
 }
 
 // Inner pages
 .page-main--inner .page-main__section {
-  margin-top: -25px;
-  padding: 30px 25px 60px;
+  position: relative;
+  margin-bottom: -25px;
   border-radius: 25px 25px 0 0;
 
   &:nth-of-type(2) {
@@ -166,8 +182,11 @@
   }
 
   @media (min-width: @tablet-width) {
-    padding: 57px 75px 114px;
     border-radius: 30px 30px 0 0;
+  }
+
+  @media (min-width: @desktop-width) {
+    border-radius: 60px 60px 0 0;
   }
 }
 
