--- a/source/less/blocks/user-profile.less
+++ b/source/less/blocks/user-profile.less
@@ -15,6 +15,19 @@
     grid-row-gap: 51px;
     padding: 66px 75px 86px;
   }
+
+  @media (min-width: @desktop-width) {
+    position: relative;
+    top: -190px;
+    grid-template-areas: "empty badge avatar"
+      "none none button"
+      "tags tags tags";
+    grid-template-columns: 860px 95px 285px;
+    grid-row-gap: 0;
+    align-items: center;
+    margin-bottom: -190px;
+    padding: 0 0 64px 125px;
+  }
 }
 
 .user-profile__badge {
@@ -28,6 +41,12 @@
   }
 }
 
+.user-profile__badge-text {
+  @media (min-width: @desktop-width) {
+    color: @white;
+  }
+}
+
 .user-profile__avatar {
   grid-area: avatar;
   display: block;
@@ -38,12 +57,24 @@
     height: 94px;
     border-radius: 7px;
   }
+
+  @media (min-width: @desktop-width) {
+    width: 190px;
+    height: 190px;
+    border-radius: 7px 7px 0 0;
+  }
 }
 
 .user-profile__change-avatar {
   grid-area: button;
   width: 100%;
   margin-bottom: 7px;
+
+  @media (min-width: @desktop-width) {
+    width: 190px;
+    margin-bottom: 27px;
+    border-radius: 0 0 10px 10px;
+  }
 }
 
 .user-profile__tags {
