Переносит внутренние отступы в центровщики

--- a/source/less/blocks/page-main.less
+++ b/source/less/blocks/page-main.less
@@ -118,8 +118,15 @@
   }
 
   @media (min-width: @desktop-width) {
-    padding: 223px 500px 68px 124px;
+    padding: 223px 0 68px;
     border-radius: 0 0 60px 60px;
+  }
+}
+
+.page-main__title-wrapper {
+  @media (min-width: @desktop-width) {
+    padding-right: 500px;
+    padding-left: 125px;
   }
 }
 
@@ -186,6 +193,7 @@
   }
 
   @media (min-width: @desktop-width) {
+    margin-bottom: -60px;
     border-radius: 60px 60px 0 0;
   }
 }
