Добавляет миксин move-up

--- a/source/less/blocks/companion-card.less
+++ b/source/less/blocks/companion-card.less
@@ -57,10 +57,10 @@
 }
 
 .companion-card__flags {
-  position: relative;
-  margin-top: -40px;
-  margin-bottom: 13px;
   order: 1;
+  position: relative;
+  top: -40px;
+  margin-bottom: -15px;
 }
 
 .companion-card__transport-list {
