--- a/source/less/blocks/menu.less
+++ b/source/less/blocks/menu.less
@@ -180,7 +180,7 @@
 
   @media (min-width: @desktop-width) {
     position: relative;
-    margin-top: -53px;
+    .move-up(-53px);
     padding: 0;
   }
 }
