--- a/source/less/blocks/page-footer.less
+++ b/source/less/blocks/page-footer.less
@@ -5,7 +5,15 @@
   border-radius: 25px 25px 0 0;
 
   &--index {
-    margin-top: -25px;
+    margin-top: -75px;
+
+    @media (min-width: @tablet-width) {
+      margin-top: -70px;
+    }
+
+    @media (min-width: @desktop-width) {
+      margin-top: -228px;
+    }
   }
 }
 
