--- a/source/less/blocks/address.less
+++ b/source/less/blocks/address.less
@@ -62,17 +62,19 @@
 .address__map-container {
   position: relative;
   z-index: @z-index-address-map-container;
-  margin-top: -25px;
   width: 100%;
   height: 328px;
+  margin-top: -25px;
   overflow-x: hidden;
 
-  @media (min-width: @desktop-width) {
+  @media (min-width: @tablet-width) {
     height: 581px;
+    margin-top: -47px;
   }
 
   @media (min-width: @desktop-width) {
     height: 584px;
+    margin-top: -122px;
   }
 }
 
