--- a/source/less/blocks/country-card.less
+++ b/source/less/blocks/country-card.less
@@ -30,14 +30,15 @@
 .country-card__container {
   order: 2;
   position: relative;
-  margin-top: -10px;
+  .move-up(-10px);
   padding: 26px 24px 24px;
   background-color: @white;
   border-radius: 10px;
 
   @media (min-width: @tablet-width) {
-    z-index: 2;
     order: 1;
+    .move-up(0);
+    z-index: 2;
     box-sizing: border-box;
     width: 433px;
     min-height: 140px;
