--- a/source/less/blocks/button.less
+++ b/source/less/blocks/button.less
@@ -47,6 +47,14 @@
     }
   }
 
+  &--mobile-round {
+    @media (max-width: 767px) {
+      padding: 12px 12px 8px;
+      text-transform: uppercase;
+      border-radius: 25px;
+    }
+  }
+
   &--short {
     @media (min-width: @tablet-width) {
       width: 284px;
