--- a/source/less/blocks/calendar.less
+++ b/source/less/blocks/calendar.less
@@ -37,15 +37,14 @@
   display: grid;
   grid-template-columns: repeat(7, 1fr);
   align-items: center;
-  grid-template-rows: 32px;
+  min-height: 32px;
   text-align: center;
 
   @media (min-width: @tablet-width) {
-    grid-template-rows: 45px;
+    min-height: 45px;
   }
 
   @media (min-width: @desktop-width) {
-    margin-bottom: 10px;
     text-align: left;
   }
 }
@@ -81,20 +80,15 @@
   display: grid;
   grid-template-columns: repeat(7, 1fr);
   align-items: center;
-  grid-template-rows: repeat(6, 32px);
-
-  @media (min-width: @tablet-width) {
-    grid-template-rows: repeat(6, 69px);
-  }
 
   @media (min-width: @desktop-width) {
-    grid-template-rows: repeat(6, 71px);
     align-items: stretch;
   }
 }
 
 .calendar__day {
   box-sizing: border-box;
+  min-height: 32px;
   margin: 0;
   padding: 8px;
   font-weight: 400;
@@ -115,11 +109,13 @@
   }
 
   @media (min-width: @tablet-width) {
+    min-height: 69px;
     padding: 27px;
     .fontsize(18px);
   }
 
   @media (min-width: @desktop-width) {
+    min-height: 71px;
     padding: 15px 16px;
     text-align: left;
     color: @special-grey;
