Добавляет блок слайдера

--- a/source/less/style.less
+++ b/source/less/style.less
@@ -67,6 +67,7 @@
 // Blocks -- filter block
 @import "blocks/filter-country.less";
 @import "blocks/filter-catalog.less";
+@import "blocks/range-slider.less";
 
 // Blocks -- catalog block
 @import "blocks/catalog.less";
