Добавляет розовый цвет и z-index для элементов каталога

--- a/source/less/global/variables.less
+++ b/source/less/global/variables.less
@@ -32,6 +32,7 @@
 @special-orange: #FF8D30;
 @special-orange-light: #FFA530;
 @special-orange-dark: #F26926;
+@special-pink: #F9EAEA;
 
 // Viewports
 @mobile-width-only: 767px;
@@ -53,3 +54,6 @@
 @z-index-page-main-title-yellow: -1;
 @z-index-calendar-day-hover: 2;
 @z-index-country-choice-container: 2;
+@z-index-filter-country: 1;
+@z-index-page-main-title-container: 2;
+@z-index-filter-country-menu: -1;
