Задаёт сетку странице каталога

--- a/source/less/blocks/catalog.less
+++ b/source/less/blocks/catalog.less
@@ -1,14 +1,18 @@
-.catalog {
-  padding: 0 25px 62px;
-}
-
 .catalog__list {
   margin: 0;
+  margin-bottom: 19px;
   padding: 0;
   list-style: none;
 }
 
+.catalog__item:not(:last-child) {
+  margin-bottom: 10px;
+}
+
 .catalog__more-link {
+  display: block;
+  width: 100%;
+  margin-bottom: 18px;
   font-weight: 700;
   font-size: 17px;
   line-height: 30px;
