--- a/source/less/blocks/filter-country.less
+++ b/source/less/blocks/filter-country.less
@@ -1,7 +1,37 @@
+.filter-country {
+  position: relative;
+  .move-up(-25px);
+  z-index: @z-index-filter-country;
+}
+
+.filter-country__tabs-container {
+  background-color: @special-bluegrey;
+  border-radius: 0 0 25px 25px;
+}
+
+.filter-country__wrapper {
+  padding: 45px 25px 15px;
+}
+
+.filter-country__title {
+  display: inline-block;
+  padding: 0 25px;
+}
+
 .filter-country__tabs {
+  position: absolute;
+  top: 70px;
+  left: 0;
+  display: none;
+  width: 100%;
   margin: 0;
-  padding: 0;
+  padding: 31px 50px 0;
+  background-color: @special-bluegrey;
   list-style: none;
+}
+
+.filter-country--open .filter-country__tabs {
+  display: block;
 }
 
 .filter-country__tab {
@@ -27,6 +57,37 @@
   color: @basic-blue-other;
 }
 
+// Menu
+.filter-country__menu-container {
+  position: absolute;
+  top: 180px;
+  left: 0;
+  z-index: @z-index-filter-country-menu;
+  display: none;
+  width: 100%;
+  background-color: @special-bluegrey;
+  border-radius: 0 0 25px 25px;
+}
+
+.filter-country--open .filter-country__menu-container {
+  display: block;
+}
+
+.filter-country__choice-container {
+  margin-bottom: 28px;
+  padding: 0 25px;
+}
+
+.filter-country__menu-wrapper {
+  padding: 46px 25px 28px;
+}
+
+.filter-country__first-letters {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+  margin-bottom: 15px;
+}
+
 .filter-country__first-letter {
   padding: 13px;
   font-weight: 500;
@@ -35,7 +96,13 @@
   text-transform: uppercase;
   color: @basic-blue-light;
   background-color: @white;
+  border: 1px solid @special-grey-border;
+  border-top: 0;
   cursor: pointer;
+
+  &:nth-child(-n+5) {
+    border-top: 1px solid @special-grey-border;
+  }
 
   &--current {
     color: @white;
@@ -43,7 +110,24 @@
   }
 }
 
+.filter-country__first-letter:not(:nth-of-type(5n)) {
+  border-right: 0;
+}
+
+.filter-country .filter-country__first-letter--current {
+  border: 1px solid @basic-blue-light;
+}
+
+.filter-country__list-container {
+  display: none;
+
+  &--show {
+    display: block;
+  }
+}
+
 .filter-country__list-title {
+  display: none;
   margin: 0;
   font-weight: 700;
   .fontsize(60px);
@@ -67,4 +151,8 @@
   &:active {
     color: fade(@basic-blue-light, 30%);
   }
+}
+
+.filter-country__close {
+  width: 100%;
 }
