--- a/source/less/blocks/page-main.less
+++ b/source/less/blocks/page-main.less
@@ -77,7 +77,6 @@
   }
 }
 
-
 .page-main__wrapper {
   padding: 71px 25px 34px;
 
@@ -92,36 +91,39 @@
 
 .page-main__title-container {
   position: relative;
+  z-index: @z-index-page-main-title-container;
   box-sizing: border-box;
   min-height: 143px;
   padding: 95px 25px 12px;
   background-color: @basic-blue-inner;
   border-radius: 0 0 25px 25px;
 
-  &::before {
-    content: "";
-    position: absolute;
-    bottom: -4px;
-    left: 0;
-    z-index: @z-index-page-main-title-yellow;
-    display: block;
-    width: 100%;
-    height: 30px;
-    background-color: @basic-yellow;
-  }
-
   @media (min-width: @tablet-width) {
     padding: 224px 75px 66px;
     border-radius: 0 0 50px 50px;
-
-    &::before {
-      display: none;
-    }
   }
 
   @media (min-width: @desktop-width) {
     padding: 223px 0 68px;
     border-radius: 0 0 60px 60px;
+  }
+
+  &--yellow-corners {
+    &::before {
+      content: "";
+      position: absolute;
+      bottom: -4px;
+      left: 0;
+      z-index: @z-index-page-main-title-yellow;
+      display: block;
+      width: 100%;
+      height: 30px;
+      background-color: @basic-yellow;
+    }
+
+    @media (min-width: @tablet-width) {
+      display: none;
+    }
   }
 }
 
@@ -158,7 +160,7 @@
     &::after {
       content: "";
       position: absolute;
-      bottom: -14px;
+      bottom: -43px;
       left: 0;
       display: block;
       width: 100%;
@@ -174,6 +176,10 @@
       }
     }
   }
+}
+
+.page-main__back-link {
+  display: none;
 }
 
 // Inner pages
@@ -222,4 +228,12 @@
       }
     }
   }
+
+  &--no-margin {
+    margin: 0;
+  }
+}
+
+.page-main__content {
+  padding: 21px 25px 110px;
 }
