--- a/source/less/blocks/pagination.less
+++ b/source/less/blocks/pagination.less
@@ -1,8 +1,11 @@
 .pagination {
-  background-color: @white;
+  @media (min-width: @tablet-width) {
+    background-color: @white;
+  }
 }
 
 .pagination__list {
+  display: none;
   margin: 0;
   padding: 25px 28px;
   list-style: none;
@@ -29,4 +32,18 @@
       color: @basic-blue-light;
     }
   }
+}
+
+.pagination__controls {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  width: 100%;
+  height: 51px;
+  background-color: @white;
+  border-radius: 20px;
+}
+
+.pagination__previous {
+  box-sizing: border-box;
+  border-right: 1px solid @basic-steelblue;
 }
