--- a/source/less/blocks/range-slider.less
+++ b/source/less/blocks/range-slider.less
@@ -1,1 +1,32 @@
-// range-slider block
+.range-slider__bar {
+  position: relative;
+  width: 100%;
+  height: 2px;
+  background-color: fade(@basic-blue-light, 20%);
+}
+
+.range-slider__progress {
+  position: absolute;
+  left: 33%;
+  width: 67%;
+  height: 2px;
+  background-color: @basic-blue-light;
+}
+
+.range-slider__toggler {
+  position: absolute;
+  top: -4px;
+  .circle(10px);
+  padding: 0;
+  background-color: @basic-blue-light;
+  border: 0;
+  cursor: pointer;
+
+  &--min {
+    left: 33%;
+  }
+
+  &--max {
+    left: 100%;
+  }
+}
