--- a/source/less/blocks/transport-list.less
+++ b/source/less/blocks/transport-list.less
@@ -7,8 +7,22 @@
   list-style: none;
 }
 
-.transport-list__item:not(:last-child) {
-  margin-right: 13px;
+.transport-list__item {
+  &:not(:last-child) {
+    margin-right: 13px;
+  }
+
+  &--blue {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    .circle(32px);
+    background-color: @basic-steelblue;
+  }
+}
+
+.transport-list .transport-list__item--blue {
+  margin-right: 0;
 }
 
 .transport-list__icon {
