--- a/source/less/blocks/traveler-card.less
+++ b/source/less/blocks/traveler-card.less
@@ -1,9 +1,23 @@
 .traveler-card {
-  padding: 15px 18px 23px;
+  display: grid;
+  grid-template-areas: "avatar name name"
+    "avatar likes likes"
+    "tags tags tags"
+    "countries countries countries"
+    "transport transport level"
+    "button button button";
+  grid-template-columns: 105px 89px 74px;
+  width: 270px;
+  margin: 0 auto;
+  padding: 15px 0 23px;
   background-color: @white;
+  border-radius: 20px;
 }
 
 .traveler-card__name {
+  grid-area: name;
+  margin: 0;
+  padding-right: 45px;
   .interactions-opacity();
 }
 
@@ -11,6 +25,35 @@
   font-weight: 700;
   .fontsize(20px);
   color: @basic-blue-light;
+
+  &--avatar {
+    grid-area: avatar;
+    padding-left: 18px;
+  }
+}
+
+.traveler-card__avatar {
+  display: block;
+  .circle(70px);
+}
+
+.traveler-card__likes {
+  position: relative;
+  left: -40px;
+  grid-area: likes;
+  display: flex;
+  align-items: center;
+}
+
+.traveler-card__like-button {
+  .circle(30px);
+  margin-right: 12px;
+  border: 0;
+  background-color: @special-bluegrey;
+
+  &--liked {
+    background-color: @special-pink;
+  }
 }
 
 .traveler-card__likes-counter {
@@ -22,14 +65,60 @@
 }
 
 .traveler-card__tags {
+  grid-area: tags;
+  margin: 0;
+  padding: 12px 26px 24px;
   font-weight: 400;
   font-size: 15px;
   line-height: 18px;
 }
 
+.traveler-card__countries {
+  grid-area: countries;
+  padding-bottom: 25px;
+  border-top: 1px solid @basic-steelblue;
+  border-bottom: 1px solid @basic-steelblue;
+}
+
+.traveler-card__transport {
+  grid-area: transport;
+}
+
+.traveler-card__transport-list {
+  justify-content: flex-start;
+  padding-left: 20px;
+}
+
+.traveler-card__level {
+  grid-area: level;
+  min-height: 61px;
+  margin-bottom: 14px;
+}
+
 .traveler-card__level-title {
+  position: relative;
+  display: inline-block;
+  margin: 0 0 10px;
+  padding: 0 10px 0 14px;
   font-weight: 400;
   font-size: 15px;
   line-height: 16px;
   text-transform: lowercase;
+  background-color: @white;
+  transform: translateY(-73%);
+}
+
+.traveler-card__badge {
+  position: relative;
+  top: -30px;
+  left: 10px;
+}
+
+.traveler-card__badge-label {
+  display: none;
+}
+
+.traveler-card__send-message {
+  grid-area: button;
+  margin: 0 20px;
 }
