--- a/source/less/blocks/traveler-info.less
+++ b/source/less/blocks/traveler-info.less
@@ -1,14 +1,24 @@
 .traveler-info__title {
+  position: relative;
+  left: 15px;
+  display: inline-block;
+  margin: 0;
+  padding: 0 10px;
   font-weight: 400;
   font-size: 15px;
   line-height: 16px;
   text-transform: lowercase;
+  background-color: @white;
+  transform: translateY(-73%);
 }
 
 .traveler-info__list {
   margin: 0;
-  padding: 0;
   list-style: none;
+
+  &--padding {
+    padding: 0 26px 0 65px;
+  }
 }
 
 .traveler-info__item {
@@ -17,4 +27,8 @@
   line-height: 16px;
   text-transform: uppercase;
   color: @basic-blue-light;
+
+  &:not(:last-child) {
+    margin-bottom: 14px;
+  }
 }
