--- a/source/less/blocks/level-bar.less
+++ b/source/less/blocks/level-bar.less
@@ -21,5 +21,11 @@
     cx: 24.5;
     cy: 24.5;
     r: 22.5;
+
+    @media (min-width: @tablet-width) {
+      cx: 30;
+      cy: 30;
+      r: 28;
+    }
   }
 }
