--- a/source/less/blocks/page-footer.less
+++ b/source/less/blocks/page-footer.less
@@ -4,6 +4,14 @@
   background-color: @white;
   border-radius: 25px 25px 0 0;
 
+  @media (min-width: @tablet-width) {
+    border-radius: 40px 40px 0 0;
+  }
+
+  @media (min-width: @desktop-width) {
+    border-radius: 58px 58px 0 0;
+  }
+
   &--index {
     margin-top: -75px;
 
