--- a/source/less/blocks/transport-list.less
+++ b/source/less/blocks/transport-list.less
@@ -18,6 +18,10 @@
     align-items: center;
     .circle(32px);
     background-color: @basic-steelblue;
+
+    @media (min-width: @tablet-width) {
+      background-color: transparent;
+    }
   }
 }
 
