--- a/source/less/blocks/filter-catalog.less
+++ b/source/less/blocks/filter-catalog.less
@@ -3,16 +3,48 @@
   padding: 26px 25px 22px;
   background-color: @basic-yellow;
   border-radius: 20px;
+
+  @media (min-width: @tablet-width) {
+    margin-bottom: 40px;
+    padding: 37px 35px 37px;
+  }
 }
 
 .filter-catalog__title {
   margin: 0 0 23px;
   .fontsize(22px);
   color: @basic-blue-light;
+
+  @media (min-width: @tablet-width) {
+    padding-bottom: 38px;
+    .fontsize(30px);
+    border-bottom: 1px solid @special-yellow-faded;
+  }
 }
 
-.filter-catalog__fieldset:last-of-type {
-  margin-bottom: 21px;
+.filter-catalog__fieldset {
+  &:last-of-type {
+    margin-bottom: 21px;
+  }
+
+  @media (min-width: @tablet-width) {
+    padding-left: 127px;
+
+    &:not(:last-of-type) {
+      margin-bottom: -15px;
+    }
+
+    &:first-of-type {
+      margin-bottom: -47px;
+      padding-top: 34px;
+    }
+
+    &:last-of-type {
+      border-bottom: 1px solid @special-yellow-faded;
+      margin-bottom: 36px;
+      padding-bottom: 15px;
+    }
+  }
 }
 
 .filter-catalog__legend {
@@ -26,14 +58,47 @@
   color: @basic-blue-light;
   border-top: 1px solid @special-yellow-faded;
   cursor: pointer;
-
   .interactions-opacity();
+
+  @media (min-width: @tablet-width) {
+    position: relative;
+    left: -127px;
+    box-sizing: border-box;
+    width: 127px;
+    margin-bottom: 0;
+    padding-right: 10px;
+    font-weight: 500;
+    .fontsize(20px);
+    border: 0;
+  }
+}
+
+.filter-catalog__legend-colon {
+  display: none;
+
+  @media (min-width: @tablet-width) and (max-width: 1439px) {
+    display: inline;
+  }
 }
 
 .filter-catalog__options {
   margin: 0;
   padding: 0;
   list-style: none;
+
+  @media (min-width: @tablet-width) {
+    position: relative;
+    top: -23px;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    align-items: center;
+  }
+}
+
+.filter-catalog__fieldset:first-of-type .filter-catalog__options {
+  @media (min-width: @tablet-width) {
+    top: -53px;
+  }
 }
 
 .filter-catalog__label {
@@ -41,13 +106,34 @@
   font-size: 15px;
   line-height: 20px;
   color: @black;
-
   .interactions-opacity();
+
+  @media (min-width: @tablet-width) {
+    .fontsize(20px);
+  }
 }
 
 .filter-catalog__transport-list {
   margin: 0;
   justify-content: flex-start;
+
+  @media (min-width: @tablet-width) {
+    position: relative;
+    top: -27px;
+    margin-bottom: 20px;
+  }
+}
+
+.filter-catalog__level-filter {
+  @media (min-width: @tablet-width) {
+    position: relative;
+    top: -29px;
+    display: grid;
+    grid-template-areas: "range numbers";
+    grid-template-columns: 1fr 150px;
+    grid-gap: 61px;
+    align-items: center;
+  }
 }
 
 .filter-catalog__number-inputs {
@@ -80,6 +166,23 @@
     height: 1px;
     background-color: @special-grey-border;
   }
+
+  @media (min-width: @tablet-width) {
+    grid-area: numbers;
+    grid-template-columns: 74px 74px;
+    width: 148px;
+    margin-bottom: 0;
+
+    &::before {
+      left: 63px;
+      width: 21px;
+    }
+
+    &::after {
+      left: 63px;
+      width: 21px;
+    }
+  }
 }
 
 .filter-catalog__number-input {
@@ -103,6 +206,16 @@
   }
 }
 
+.filter-catalog__level-range {
+  @media (min-width: @tablet-width) {
+    grid-area: range;
+  }
+}
+
 .filter-catalog__button {
   width: 100%;
+
+  @media (min-width: @tablet-width) {
+    .fontsize(20px);
+  }
 }
