--- a/source/less/blocks/page-main.less
+++ b/source/less/blocks/page-main.less
@@ -197,7 +197,7 @@
   }
 
   @media (min-width: @tablet-width) {
-    border-radius: 30px 30px 0 0;
+    border-radius: 40px 40px 0 0;
   }
 
   @media (min-width: @desktop-width) {
@@ -235,5 +235,9 @@
 }
 
 .page-main__content {
-  padding: 21px 25px 110px;
+  padding: 21px 25px 46px;
+
+  @media (min-width: @tablet-width) {
+    padding: 43px 40px 62px;
+  }
 }
