--- a/source/less/blocks/page-footer.less
+++ b/source/less/blocks/page-footer.less
@@ -12,7 +12,7 @@
     border-radius: 58px 58px 0 0;
   }
 
-  &--index {
+  &--move-up {
     margin-top: -75px;
 
     @media (min-width: @tablet-width) {
