--- a/source/less/global/variables.less
+++ b/source/less/global/variables.less
@@ -51,9 +51,9 @@
 @z-index-address-container: 2;
 @z-index-address-map-container: 1;
 @z-index-page-footer: 3;
-@z-index-page-main-title-yellow: -1;
 @z-index-calendar-day-hover: 2;
 @z-index-country-choice-container: 2;
 @z-index-filter-country: 1;
 @z-index-page-main-title-container: 2;
 @z-index-filter-country-menu: -1;
+@z-index-user-profile: 3;
