--- a/source/less/blocks/user-profile.less
+++ b/source/less/blocks/user-profile.less
@@ -19,6 +19,7 @@
   @media (min-width: @desktop-width) {
     position: relative;
     top: -190px;
+    z-index: @z-index-user-profile;
     grid-template-areas: "empty badge avatar"
       "none none button"
       "tags tags tags";
