--- a/source/less/blocks/catalog.less
+++ b/source/less/blocks/catalog.less
@@ -7,6 +7,11 @@
   @media (min-width: @tablet-width) {
     margin-bottom: 51px;
   }
+
+  @media (min-width: @desktop-width) {
+    grid-area: catalog;
+    margin-bottom: 66px;
+  }
 }
 
 .catalog__item:not(:last-child) {
@@ -14,6 +19,10 @@
 
   @media (min-width: @tablet-width) {
     margin-bottom: 31px;
+  }
+
+  @media (min-width: @desktop-width) {
+    margin-bottom: 30px;
   }
 }
 
@@ -31,5 +40,9 @@
   @media (min-width: @tablet-width) {
     .fontsize(20px);
     margin-bottom: 52px;
+  }
+
+  @media (min-width: @desktop-width) {
+    margin-bottom: 73px;
   }
 }
