--- a/source/less/blocks/filter-catalog.less
+++ b/source/less/blocks/filter-catalog.less
@@ -8,6 +8,11 @@
     margin-bottom: 40px;
     padding: 37px 35px 37px;
   }
+
+  @media (min-width: @desktop-width) {
+    grid-area: filter;
+    padding: 46px 42px 48px 49px;
+  }
 }
 
 .filter-catalog__title {
@@ -20,6 +25,12 @@
     .fontsize(30px);
     border-bottom: 1px solid @special-yellow-faded;
   }
+
+  @media (min-width: @desktop-width) {
+    margin-bottom: 31px;
+    padding: 0;
+    border: 0;
+  }
 }
 
 .filter-catalog__fieldset {
@@ -27,7 +38,7 @@
     margin-bottom: 21px;
   }
 
-  @media (min-width: @tablet-width) {
+  @media (min-width: @tablet-width) and (max-width: 1439px) {
     padding-left: 127px;
 
     &:not(:last-of-type) {
@@ -50,7 +61,6 @@
 .filter-catalog__legend {
   display: block;
   width: 100%;
-  margin-bottom: 16px;
   padding: 12px 0 0;
   font-weight: 700;
   line-height: 18px;
@@ -71,6 +81,11 @@
     .fontsize(20px);
     border: 0;
   }
+
+  @media (min-width: @desktop-width) {
+    position: static;
+    padding: 0;
+  }
 }
 
 .filter-catalog__legend-colon {
@@ -82,22 +97,40 @@
 }
 
 .filter-catalog__options {
+  display: none;
   margin: 0;
+  margin-top: 16px;
   padding: 0;
   list-style: none;
 
-  @media (min-width: @tablet-width) {
+  @media (min-width: @tablet-width) and (max-width: 1439px) {
     position: relative;
     top: -23px;
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
     align-items: center;
   }
+
+  @media (min-width: @desktop-width) {
+    margin-top: 23px;
+  }
+
+  &--show {
+    display: grid;
+  }
 }
 
 .filter-catalog__fieldset:first-of-type .filter-catalog__options {
-  @media (min-width: @tablet-width) {
+  @media (min-width: @tablet-width) and (max-width: 1439px) {
     top: -53px;
+  }
+}
+
+.filter-catalog__option:not(:last-of-type) {
+  margin-bottom: 12px;
+
+  @media (min-width: @desktop-width) {
+    margin-bottom: 16px;
   }
 }
 
@@ -115,17 +148,25 @@
 
 .filter-catalog__transport-list {
   margin: 0;
+  margin-top: 19px;
   justify-content: flex-start;
 
-  @media (min-width: @tablet-width) {
+  @media (min-width: @tablet-width) and (max-width: 1439px) {
     position: relative;
     top: -27px;
+    margin-top: 0;
     margin-bottom: 20px;
+  }
+
+  @media (min-width: @desktop-width) {
+    margin-top: 17px;
   }
 }
 
 .filter-catalog__level-filter {
-  @media (min-width: @tablet-width) {
+  margin-top: 16px;
+
+  @media (min-width: @tablet-width) and (max-width: 1439px) {
     position: relative;
     top: -29px;
     display: grid;
@@ -133,6 +174,7 @@
     grid-template-columns: 1fr 150px;
     grid-gap: 61px;
     align-items: center;
+    margin-top: 0;
   }
 }
 
@@ -167,7 +209,7 @@
     background-color: @special-grey-border;
   }
 
-  @media (min-width: @tablet-width) {
+  @media (min-width: @tablet-width) and (max-width: 1439px) {
     grid-area: numbers;
     grid-template-columns: 74px 74px;
     width: 148px;
@@ -181,6 +223,21 @@
     &::after {
       left: 63px;
       width: 21px;
+    }
+  }
+
+  @media (min-width: @desktop-width) {
+    grid-template-columns: 95px 97px;
+    width: 192px;
+
+    &::before {
+      left: 85px;
+      width: 20px;
+    }
+
+    &::after {
+      left: 85px;
+      width: 20px;
     }
   }
 }
@@ -207,7 +264,7 @@
 }
 
 .filter-catalog__level-range {
-  @media (min-width: @tablet-width) {
+  @media (min-width: @tablet-width) and (max-width: 1439px) {
     grid-area: range;
   }
 }
