--- a/source/less/blocks/page-main.less
+++ b/source/less/blocks/page-main.less
@@ -14,6 +14,23 @@
       .move-up(-130px);
     }
   }
+
+  &--yellow-corners {
+    &::before {
+      content: "";
+      position: absolute;
+      top: 147px;
+      left: 0;
+      display: block;
+      width: 100%;
+      height: 30px;
+      background-color: @basic-yellow;
+
+      @media (min-width: @tablet-width) {
+        display: none;
+      }
+    }
+  }
 }
 
 .page-main__section {
@@ -99,6 +116,7 @@
   border-radius: 0 0 25px 25px;
 
   @media (min-width: @tablet-width) {
+    z-index: @z-index-page-main-title-container;
     padding: 224px 75px 66px;
     border-radius: 0 0 50px 50px;
   }
@@ -106,24 +124,6 @@
   @media (min-width: @desktop-width) {
     padding: 223px 0 68px;
     border-radius: 0 0 60px 60px;
-  }
-
-  &--yellow-corners {
-    &::before {
-      content: "";
-      position: absolute;
-      bottom: -4px;
-      left: 0;
-      z-index: @z-index-page-main-title-yellow;
-      display: block;
-      width: 100%;
-      height: 30px;
-      background-color: @basic-yellow;
-    }
-
-    @media (min-width: @tablet-width) {
-      display: none;
-    }
   }
 }
 
@@ -227,6 +227,12 @@
         bottom: -68px;
       }
     }
+
+    @media (min-width: @tablet-width) {
+      &::after {
+        bottom: -71px;
+      }
+    }
   }
 
   &--no-margin {
@@ -239,5 +245,14 @@
 
   @media (min-width: @tablet-width) {
     padding: 43px 40px 62px;
+  }
+
+  @media (min-width: @desktop-width) {
+    display: grid;
+    grid-template-areas: "catalog filter";
+    grid-template-columns: 949px 285px;
+    align-items: start;
+    grid-gap: 85px;
+    padding: 48px 60px 75px;
   }
 }
