--- a/source/less/blocks/traveler-info.less
+++ b/source/less/blocks/traveler-info.less
@@ -14,6 +14,10 @@
   @media (min-width: @tablet-width) {
     left: 71px;
   }
+
+  @media (min-width: @desktop-width) {
+    display: none;
+  }
 }
 
 .traveler-info__list {
@@ -30,6 +34,16 @@
 
     @media (min-width: @tablet-width) {
       padding: 0 35px;
+    }
+
+    @media (min-width: @desktop-width) {
+      padding: 54px 20px 39px 0;
+    }
+  }
+
+  &--countries {
+    @media (min-width: @desktop-width) {
+      flex-direction: column;
     }
   }
 }
@@ -52,6 +66,15 @@
     &:not(:last-child) {
       margin-right: 25px;
       margin-bottom: 0;
+    }
+  }
+
+  @media (min-width: @desktop-width) {
+    padding-left: 54px;
+
+    &:not(:last-child) {
+      margin: 0;
+      margin-bottom: 16px;
     }
   }
 }
